fix slider padding on mobile

--- a/styles/components/linked-slider-overlapping.module.scss
+++ b/styles/components/linked-slider-overlapping.module.scss
@@ -15,7 +15,9 @@
             }
 
             .slide_info_content {
-                padding-left: 190px;
+                @media screen and (min-width: 1024px) {
+                    padding-left: 190px;
+                }
             }
         }
 
@@ -34,7 +36,9 @@
             }
 
             .slide_info_content {
-                padding-right: 190px;
+                @media screen and (min-width: 1024px) {
+                    padding-right: 190px;
+                }
             }
         }
 
@@ -79,7 +83,7 @@
             align-items: center;
 
             &_content {
-                padding: 40px 20px;
+                padding: 40px;
 
                 @media screen and (min-width: 1024px) {
                     padding: 90px;
